fixed extra spacing between elements

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -131,14 +131,14 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
 
 .markdown>h2 {
     --ifm-h2-font-size: 1.875rem;
-    margin-bottom: 1rem;
-    margin-top: calc(var(--ifm-h2-vertical-rhythm-top) * 0.4rem);
+    margin-bottom: 0.8rem;
+    margin-top: calc(var(--ifm-h2-vertical-rhythm-top) * 0rem);
 }
 
 .markdown>h3 {
     --ifm-h3-font-size: 1.5rem;
     margin-bottom: 0.8rem;
-    margin-top: calc(var(--ifm-h3-vertical-rhythm-top) * 0.5rem);
+    margin-top: calc(var(--ifm-h3-vertical-rhythm-top) * 0rem);
 }
 
 .navbar__items--right>.navbar__item:not(:first-of-type) {
